finished the header and modified it a little bit

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,13 +16,13 @@
 
 <body>
     <header>
-        <div class="container row">
-            <a class="" href="#"><img src="../imgs/Logo.svg" alt="Logo"></a>
+        <div class="head-wrapper">
+            <a class="logo" href="#"><img src="../imgs/Logo.jpg" alt="Logo"></a>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a class="nav__link">About Us</a></li>
-                    <li class="nav__item"><a class="nav__link">Services</a></li>
-                    <li class="nav__item"><a class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">About Us</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Services</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
                 </ul>
             </nav>
             <div class="call__button"><a href="tel:+4367763483310"><img src="../imgs/Call Button.svg"
