Created and finished the hero section

--- a/pages/home.html
+++ b/pages/home.html
@@ -34,6 +34,16 @@
             </button>
         </div>
     </header>
+    <section class="hero">
+        <div class="row">
+            <div class="hero__text">
+                <h1>We'll take care of your house, office and your front yard.</h1>
+                <p>You just leave to us, <b>relax</b> and <b>smile</b>.</p>
+            </div>
+            <img class="hero__img" src="../imgs/robot-cleaning-mirror.svg" alt="robot cleaning the mirror">
+        </div>
+    </section>
+
     <script src="../js/main.js"></script>
 </body>
 
