Main Page, mobile-first done

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,9 +20,9 @@
             <a class="logo" href="#"><img src="../imgs/Logo.jpg" alt="Logo"></a>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a class="nav__link" href="#">About Us</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Services</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Über uns About Us</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Dienstleistungen Services</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Kontaktiere uns Contact</a></li>
                 </ul>
             </nav>
             <div class="call__button"><a href="tel:+4367763483310"><img src="../imgs/Call Button.svg"
@@ -37,13 +37,78 @@
     <section class="hero">
         <div class="row">
             <div class="hero__text">
-                <h1>We'll take care of your house, office and your front yard.</h1>
-                <p>You just leave to us, <b>relax</b> and <b>smile</b>.</p>
+                <h1>Wir kümmern uns um Ihr Haus, Büro und Ihren Vorgarten.</h1>
+                <p>Sie überlassen es uns, <b>Entspannen Sie sich</b> und <b>lächeln</b>.</p>
             </div>
             <img class="hero__img" src="../imgs/robot-cleaning-mirror.svg" alt="robot cleaning the mirror">
         </div>
     </section>
 
+    <section class="howItWorks">
+        <h2 class="howItWorks__heading">Wie es funktioniert</h2>
+        <p class="howItWorls__paragraph">Wir reinigen Ihre <b>Wohnung</b> oder Ihr <b>Büro</b> wann immer Sie wollen.
+            Dazu gehören jeden Tag, jeden zweiten Tag, jede Woche, alle zwei Wochen oder so ziemlich
+            jeder Plan, der zu Ihrer Zeit passt.
+        </p>
+        <div class="hIW__contactUs">
+            <img src="../imgs/house-plan-scale-svgrepo-com 1.svg" alt="house plan">
+            <h3>Kontaktiere uns</h3>
+            <p>Sie sagen uns, was wir für Sie reinigen sollen, zu Hause oder im Büro, wie groß es ist.</p>
+        </div>
+        <div class="arrowDown">
+            <img src="../imgs/ArrowDown.svg" alt="Arrow Down">
+        </div>
+        <div class="hIW__booking">
+            <img src="../imgs/calendar-svgrepo-com 1.svg" alt="house plan">
+            <h3>Eine Reservierung machen</h3>
+            <p>Wir kreuzen ein Datum im Kalender an und erscheinen, um die Reinigung durchzuführen</p>
+        </div>
+        <div class="arrowDown">
+            <img src="../imgs/ArrowDown.svg" alt="Arrow Down">
+        </div>
+        <div class="hIW__congrats">
+            <img src="../imgs/calendar-svgrepo-com 1.svg" alt="house plan">
+            <h3>Herzlichen Glückwunsch, es ist geschafft.</h3>
+            <p><b>Haus</b> ist sauber. Zeit nach Hause zu kommen.
+                <b>Büro</b> ist sauber. Zeit, wieder an die Arbeit zu kommen
+            </p>
+        </div>
+    </section>
+
+    <section class="aboutUs">
+        <h3>Aboout Us</h3>
+        <div class="aboutUs__text">
+            <p>Wir sind ein Familienunternehmen. Meine Frau und ich sind zusammen mit meinem Bruder die ersten
+                „Mitarbeiter“ der Firma. Wir sehen unser Geschäft als Teil unserer Familie und kümmern uns daher mit
+                großer Sorgfalt darum. Und die gleiche Liebe und Fürsorge, die wir unseren Kunden entgegenbringen, von
+                unserer Familie bis zu Ihrer.</p>
+        </div>
+        <div class="learnMore">
+            <p>Learn more about our services</p>
+        </div>
+        <div class="roofLogo">
+            <img src="../imgs/RoofLogo.svg" alt="Roof Logo">
+        </div>
+    </section>
+    <footer>
+        <div class="footerLinks">
+            <a class="logo" href="#"><img src="../imgs/Logo.jpg" alt="Logo"></a>
+            <ul class="nav__list footerList">
+                <li class="nav__item"><a class="nav__link" href="#">Über uns About Us</a></li>
+                <li class="nav__item"><a class="nav__link" href="#">Dienstleistungen Services</a></li>
+                <li class="nav__item"><a class="nav__link" href="#">Kontaktiere uns Contact</a></li>
+            </ul>
+        </div>
+        <hr>
+        <div class="socialMediaLinks">
+            <div class="socialMediaLinks__item"><a href="#"><img src="../imgs/FacebookLogo.svg" alt="Facebook Logo"></a>
+            </div>
+            <div class="socialMediaLinks__item"><a href="#"><img src="../imgs/InstagramLogo.svg"
+                        alt="Instagram Logo"></a></div>
+            <div class="socialMediaLinks__item"><a href="#"><img src="../imgs/Call Button.svg" alt=""></a></div>
+        </div>
+        <p>&copy; 2022 Fresh Clean Murati. Linz, Austria</p>
+    </footer>
     <script src="../js/main.js"></script>
 </body>
 
