added media queries for larger screens

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,13 +16,13 @@
 
 <body>
     <header>
-        <div class="head-wrapper">
+        <div class="row container">
             <a class="logo" href="#"><img src="../imgs/Logo.jpg" alt="Logo"></a>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a class="nav__link" href="#">Über uns About Us</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Dienstleistungen Services</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Kontaktiere uns Contact</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">About Us</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Services</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
                 </ul>
             </nav>
             <div class="call__button"><a href="tel:+4367763483310"><img src="../imgs/Call Button.svg"
@@ -34,7 +34,7 @@
             </button>
         </div>
     </header>
-    <section class="hero">
+    <section class="hero container">
         <div class="row">
             <div class="hero__text">
                 <h1>Wir kümmern uns um Ihr Haus, Büro und Ihren Vorgarten.</h1>
@@ -44,38 +44,43 @@
         </div>
     </section>
 
-    <section class="howItWorks">
-        <h2 class="howItWorks__heading">Wie es funktioniert</h2>
-        <p class="howItWorls__paragraph">Wir reinigen Ihre <b>Wohnung</b> oder Ihr <b>Büro</b> wann immer Sie wollen.
-            Dazu gehören jeden Tag, jeden zweiten Tag, jede Woche, alle zwei Wochen oder so ziemlich
-            jeder Plan, der zu Ihrer Zeit passt.
-        </p>
-        <div class="hIW__contactUs">
-            <img src="../imgs/house-plan-scale-svgrepo-com 1.svg" alt="house plan">
-            <h3>Kontaktiere uns</h3>
-            <p>Sie sagen uns, was wir für Sie reinigen sollen, zu Hause oder im Büro, wie groß es ist.</p>
-        </div>
-        <div class="arrowDown">
-            <img src="../imgs/ArrowDown.svg" alt="Arrow Down">
-        </div>
-        <div class="hIW__booking">
-            <img src="../imgs/calendar-svgrepo-com 1.svg" alt="house plan">
-            <h3>Eine Reservierung machen</h3>
-            <p>Wir kreuzen ein Datum im Kalender an und erscheinen, um die Reinigung durchzuführen</p>
-        </div>
-        <div class="arrowDown">
-            <img src="../imgs/ArrowDown.svg" alt="Arrow Down">
-        </div>
-        <div class="hIW__congrats">
-            <img src="../imgs/calendar-svgrepo-com 1.svg" alt="house plan">
-            <h3>Herzlichen Glückwunsch, es ist geschafft.</h3>
-            <p><b>Haus</b> ist sauber. Zeit nach Hause zu kommen.
-                <b>Büro</b> ist sauber. Zeit, wieder an die Arbeit zu kommen
+    <section class="howItWorks container">
+        <div>
+            <h2 class="howItWorks__heading">Wie es funktioniert</h2>
+            <p class="howItWorls__paragraph">Wir reinigen Ihre <b>Wohnung</b> oder Ihr <b>Büro</b> wann immer Sie
+                wollen.
+                Dazu gehören jeden Tag, jeden zweiten Tag, jede Woche, alle zwei Wochen oder so ziemlich
+                jeder Plan, der zu Ihrer Zeit passt.
             </p>
+        </div>
+        <div class="wrap">
+            <div class="hIW__contactUs">
+                <img src="../imgs/house-plan-scale-svgrepo-com 1.svg" alt="house plan">
+                <h3>Kontaktiere uns</h3>
+                <p>Sie sagen uns, was wir für Sie reinigen sollen, zu Hause oder im Büro, wie groß es ist.</p>
+            </div>
+            <div class="arrowDown">
+                <img src="../imgs/ArrowDown.svg" alt="Arrow Down">
+            </div>
+            <div class="hIW__booking">
+                <img src="../imgs/calendar-svgrepo-com 1.svg" alt="house plan">
+                <h3>Eine Reservierung machen</h3>
+                <p>Wir kreuzen ein Datum im Kalender an und erscheinen, um die Reinigung durchzuführen</p>
+            </div>
+            <div class="arrowDown">
+                <img src="../imgs/ArrowDown.svg" alt="Arrow Down">
+            </div>
+            <div class="hIW__congrats">
+                <img src="../imgs/house-svgrepo-com 1.svg" alt="house plan">
+                <h3>Herzlichen Glückwunsch, es ist geschafft.</h3>
+                <p><b>Haus</b> ist sauber. Zeit nach Hause zu kommen.
+                    <b>Büro</b> ist sauber. Zeit, wieder an die Arbeit zu kommen
+                </p>
+            </div>
         </div>
     </section>
 
-    <section class="aboutUs">
+    <section class="aboutUs container">
         <h3>Aboout Us</h3>
         <div class="aboutUs__text">
             <p>Wir sind ein Familienunternehmen. Meine Frau und ich sind zusammen mit meinem Bruder die ersten
@@ -91,7 +96,7 @@
         </div>
     </section>
     <footer>
-        <div class="footerLinks">
+        <div class="footerLinks container">
             <a class="logo" href="#"><img src="../imgs/Logo.jpg" alt="Logo"></a>
             <ul class="nav__list footerList">
                 <li class="nav__item"><a class="nav__link" href="#">Über uns About Us</a></li>
